--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -25,12 +25,10 @@ jobs:
       run: ant -noinput -buildfile build.xml
       
     - name: Build Docker Image
-        uses: abhishek-070/docker-image-build-push-action@v1.0
-        with:
-          registry_url: 'docker.io'
-          repository_name: 'myrepo'
-          user_name: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          image_version: 'v1.0'
-          docker_file: '.'
+      uses: mr-smithers-excellent/docker-build-push@v6
+      with:
+        image: myrepo/image-name
+      registry: docker.io
+      username: ${{ secrets.DOCKER_USERNAME }}
+      password: ${{ secrets.DOCKER_PASSWORD }}
 # Commit
